--- a/style.css
+++ b/style.css
@@ -2,3 +2,45 @@
     padding: 0;
     margin: 0;
 }
+body{
+    font-family: 'Open Sans', sans-serif;
+}
+/* header section css */
+.header-section{
+    background-image: url('/images/banner/banner2.png');
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+
+}
+.header-title{
+    position: absolute;
+    width: 525px;
+    height: 228px;
+    left: 845px;
+    top: 216px;
+    /* border-radius: nullpx; */
+
+
+}
+.title{
+    color: black;
+    font-weight: 700;
+    font-size: 35px;
+    margin-bottom: 15px;
+}
+.btn-primary{
+            margin-top: 25px;
+            padding: 10px 15px;
+            border-radius: 20px;
+            background: orange;
+            color: wheat;
+            border: none;
+            font-size: 15px;
+            font-weight: 500;
+
+}
+/* header section css */
+/* main sectiom scc */
+
+/* main sectiom scc */
