--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 /* header section css */
 .header-section{
-    background-image: url('/images/banner/banner2.png');
+    background-image: url('images/banner/banner2.png');
     background-size: cover;
     width: 100%;
     height: 100vh;
