--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ img.img-icon {
 .skill-title{
     font-size: 20px;
     font-weight: 600;
+    
 }
 .section-title{
     text-align: center;
@@ -95,3 +96,41 @@ img.img-icon {
     text-align: center;
 }
 /* servise section */
+
+/*footer section */
+.container{
+    background-color: black;
+    color: #fff;
+    background-size: cover;
+    height: 60vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    margin-top: 100px;
+}
+.social{
+    display: flex;
+    align-items: center;
+    justify-content: ;
+    margin-top: 20px;
+    gap: 10px;
+}
+.footer-title{
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 25px;
+}
+.footer-discription{
+    margin-bottom: 20px;
+    font-size: 12px;
+}
+.emails{
+    padding: 15px 30px;
+    font-size: 20px;
+}
+.btn{
+    padding: 15px 30px;
+    margin-top: 20px;
+}
+/* footer section */
