--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ img.img-icon {
 /* servise section */
 
 /*footer section */
-.container{
+.footer-container{
     background-color: black;
     color: #fff;
     background-size: cover;
