--- a/style.css
+++ b/style.css
@@ -38,16 +38,15 @@ body{
     font-size: 35px;
     margin-bottom: 15px;
 }
-.btn-primary{
-            margin-top: 25px;
-            padding: 10px 15px;
-            border-radius: 20px;
-            background: orange;
-            color: wheat;
-            border: none;
-            font-size: 15px;
-            font-weight: 500;
-
+.btn-primary {
+    margin-top: 25px;
+    padding: 15px 35px;
+    border-radius: 20px;
+    background: orange;
+    color: wheat;
+    border: none;
+    font-size: 17px;
+    font-weight: 500;
 }
 /* header section css */
 /* main sectiom scc */
@@ -134,3 +133,24 @@ img.img-icon {
     margin-top: 20px;
 }
 /* footer section */
+
+.about-section{
+    background-image:url("./images/watch.png") ;
+    width: 1080px;
+    height: 300px;
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.titles {
+    color: #fff;
+    margin-left: 70px;
+    font-size: 25px;
+    margin-bottom: 27px;
+}
+.button {
+    padding: 10px 20px;
+    margin-left: 70px;
+    color: red;
+    font-size: 15px;
+}
+/* about section */
