--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ img.img-icon {
 /* footer section */
 
 .about-section{
-    background-image:url("./images/watch.pnggi") ;
+    background-image:url("./images/watch.png") ;
     width: 1080px;
     height: 300px;
     margin-left: 150px;
